Fix the display of the comment dialog on mobile devices.
This updates the comment dialog to have a maximum width that fits
cleanly within the browser's viewport, with some spacing on the side.
This is there for mobile, where the comment dialog's default width would
easily overflow the page.

With this change, invoking the comment dialog will now properly display
it within the bounds of the viewport, allowing the user to leave a
comment and then save it without having to work around the viewport or
size.

Testing Done:
Tested on desktop, responsive mode on Chrome and Firefox, and on iOS 17.

Reviewed at https://reviews.reviewboard.org/r/13311/

--- a/reviewboard/static/rb/css/pages/reviews.less
+++ b/reviewboard/static/rb/css/pages/reviews.less
@@ -228,13 +228,6 @@
   margin-right: 0.5em;
   text-decoration: none;
 
-  .on-mobile-medium-screen-720({
-    /* Let the Markdown Reference link flow to the next line. */
-    display: block !important;
-    float: none;
-    margin-top: 0.5em;
-  });
-
   &:hover {
     text-decoration: underline;
   }
@@ -2093,15 +2086,18 @@
   border: 1px @comment-dlg-border-color solid;
   border-radius: @box-border-radius;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.35);
+  box-sizing: border-box;
   cursor: default;
   margin-top: 8px;
   overflow: hidden;
   position: absolute;
+  max-width: calc(100vw - 2em);
 
   form {
     background-color: @comment-dlg-bg;
     display: block;
     padding: @comment-dlg-padding;
+    max-width: 100%;
 
     .buttons {
       margin: 0;
